--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,35 @@ aiohttp==3.8.3
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
+click==8.1.3
+Flask==2.3.1
+Flask-Caching==2.0.2
 frozenlist==1.3.3
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
 multidict==6.0.4
+numpy==1.24.2
 openai==0.27.2
+pandas==1.5.3
+praw==7.6.1
+prawcore==2.3.0
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+pytz==2022.7.1
 requests==2.28.2
-setuptools==65.6.3
+scikit-learn==1.2.1
+scipy==1.10.1
+six==1.16.0
+threadpoolctl==3.1.0
 tqdm==4.64.1
+update-checker==0.18.0
 urllib3==1.26.14
+websocket-client==1.5.1
+Werkzeug==2.3.0
 yarl==1.8.2
